@@ -1,6 +1,8 @@
 DIST balance-3.35.tar.gz 32903 RMD160 86741eb95d8c1e8c66ecd6396a104a5b6993c2d1 SHA1 672b8913835591278033833989d25ec1d05814cd SHA256 18dc4afd470aa115891f8bb9be674e9216231666152c8f05a77eb3a05bafe85d
 DIST balance-3.40.tar.gz 33623 RMD160 5f3702c0d5a6226a66b97129b6eefb5508d096e8 SHA1 34379b3ffccd2a11767e4f808e0d57530bbe49ce SHA256 f95413719187c81a2cf512144f801219b36a1423d235479e882774915560bd3d
+DIST balance-3.48.tar.gz 33752 RMD160 7d9a0a5f0bbb8e71941281077ce5e4b117a55122 SHA1 152fc104c920f839f27eff30151910971555f6c6 SHA256 58f261bc3eea3375f8aadf68ba915fa6951bb0e92e4ac5de3376d2a07c8c8503
 EBUILD balance-3.35.ebuild 737 RMD160 77d3e4a0fffbee680826ee60365a5f6a8a21b6cc SHA1 4b799d0619dafe19de5af85285539983d2174056 SHA256 bd647f2346123eca256c687d3454500c45d71e99aea53633c99cd8d97274554c
 EBUILD balance-3.40.ebuild 737 RMD160 928319b9680e6dbb52a80fc10ba4ed02780eab43 SHA1 803cb211f1fc0628a34c4b80e2957571960b9b50 SHA256 af6748a5e3c330db33c299f25435081d54ac673689c0db11d799b07fc1984f3f
-MISC ChangeLog 2000 RMD160 a656d3bda5e8dc13808b24410c155259827d5dc0 SHA1 7a8c804ac52a9dfb1e1c588166f8a29bd63ea109 SHA256 1007724f5ff9b3a754be4ee73c8b385cc11de8e3fdc9abb432bdf36df649e973
+EBUILD balance-3.48.ebuild 737 RMD160 d2cc6dcb4f8da0c70a594037c49eacb6b8c1a9cb SHA1 64c78cbb9c335d8c902018c20c916db461a3bdc3 SHA256 d53cfa0d084aaabfe6ca33e6e3e33b9e4552c2b93fd6d9279ce191712e80a637
+MISC ChangeLog 2131 RMD160 1202cd5875ac558554ab732eefd2fd91264a141f SHA1 a6828dc521dcbe796a0d704f917a49d4d3ddfd04 SHA256 becd5d8a407a65c7edc3203bfdd4f209be2be34ad30cd09b4d78ff09eff4989b
 MISC metadata.xml 222 RMD160 15c6454b57f496a95ce9f8bd1e8f5056b2a4b4ab SHA1 2c8c279bf02e3e668858475950313c7802301433 SHA256 c301d61bfffaa1737fa87d674b3858777d9cebe39ae2b6acbb9ccc87576538e6
